syntax="proto3";

package community_api;

option go_package = "github.com/2024_2_BetterCallFirewall/internal/api/grpc/community_api";

service CommunityService{
  rpc CheckAccess(CheckAccessRequest) returns (CheckAccessResponse){}
  rpc GetHeader(GetHeaderRequest) returns(GetHeaderResponse){}
}

message CheckAccessRequest{
  uint32 UserID = 1;
  uint32 CommunityID = 2;
}

message CheckAccessResponse {
  bool Access = 1;
}

message Header {
  uint32 AuthorID = 1;
  uint32 CommunityID = 2;
  string Author = 3;
  string Avatar = 4;
}

message GetHeaderRequest{
  uint32 CommunityID = 1;
}

message GetHeaderResponse{
  Header Head = 1;
}